[tool.poetry]
name = "beecrowd-python"
version = "0.1.0"
description = "Soluções para desafios do Beecrowd"
authors = ["Leandro Reis <leandro.e.reis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
